--- a/assets/css/jakehop_style.css
+++ b/assets/css/jakehop_style.css
@@ -65,7 +65,7 @@ body, html {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url(img/background.jpg);
+    background-image: url(../img/img_jake/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 0%;
